fix some spacing

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -19,7 +19,7 @@
 .about{
     padding:30px;
     display:flex;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items:flex-start;
 }
 
