--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -1,7 +1,7 @@
 .Project{
     color:rgb(50,50,50);
     animation: fadeIn 0.5s 1;
-    padding:5px 10px;
+    padding:5px 20px;
     &.dark{
         color:rgb(255,255,255) !important;
     }
